@@ -1,5 +1,23 @@
 package com.softech.ls360.lcms.contentbuilder.dao.impl;
 
+import com.softech.ls360.lcms.contentbuilder.dao.GenericDAOImpl;
+import com.softech.ls360.lcms.contentbuilder.dao.SPCallingParams;
+import com.softech.ls360.lcms.contentbuilder.dao.SlideDAO;
+import com.softech.ls360.lcms.contentbuilder.model.Slide;
+import com.softech.ls360.lcms.contentbuilder.model.SlideAsset;
+import com.softech.ls360.lcms.contentbuilder.utils.LCMSProperties;
+import com.softech.ls360.lcms.contentbuilder.utils.LCMS_Util;
+import com.softech.ls360.lcms.contentbuilder.utils.StringUtil;
+import com.softech.ls360.lcms.contentbuilder.utils.TypeConvertor;
+import org.apache.log4j.Logger;
+import org.springframework.transaction.annotation.Propagation;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
+
+import javax.persistence.EntityManager;
+import javax.persistence.ParameterMode;
+import javax.persistence.Query;
+import javax.persistence.StoredProcedureQuery;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.Reader;
@@ -9,26 +27,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-
-import javax.persistence.EntityManager;
-import javax.persistence.ParameterMode;
-import javax.persistence.Query;
-import javax.persistence.StoredProcedureQuery;
-
-import com.softech.ls360.lcms.contentbuilder.utils.TypeConvertor;
-import org.apache.log4j.Logger;
-import org.springframework.transaction.annotation.Propagation;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.util.StringUtils;
-
-import com.softech.ls360.lcms.contentbuilder.dao.GenericDAOImpl;
-import com.softech.ls360.lcms.contentbuilder.dao.SPCallingParams;
-import com.softech.ls360.lcms.contentbuilder.dao.SlideDAO;
-import com.softech.ls360.lcms.contentbuilder.model.Slide;
-import com.softech.ls360.lcms.contentbuilder.model.SlideAsset;
-import com.softech.ls360.lcms.contentbuilder.utils.LCMSProperties;
-import com.softech.ls360.lcms.contentbuilder.utils.LCMS_Util;
-import com.softech.ls360.lcms.contentbuilder.utils.StringUtil;
 
 
 public class SlideDAOImpl extends GenericDAOImpl<Slide> implements SlideDAO {
@@ -137,10 +135,10 @@ public class SlideDAOImpl extends GenericDAOImpl<Slide> implements SlideDAO {
                 dto.setName(courseRow[1].toString());
                 dto.setDuration(Long.parseLong(StringUtil.ifNullReturnZero(courseRow[5])));
                 dto.setTemplateID(Long.parseLong(StringUtil.ifNullReturnZero(courseRow[4])));
-                dto.setDisplayStandardTF(courseRow[22] == null ? false : TypeConvertor.AnyToBoolean(courseRow[22].toString()));
-                dto.setDisplayWideScreenTF(courseRow[23] == null ? false : TypeConvertor.AnyToBoolean(courseRow[23].toString()));
+                dto.setDisplayStandardTF(courseRow[22] == null ? Boolean.FALSE : TypeConvertor.AnyToBoolean(courseRow[22].toString()));
+                dto.setDisplayWideScreenTF(courseRow[23] == null ? Boolean.FALSE : TypeConvertor.AnyToBoolean(courseRow[23].toString()));
                 dto.setEmbedCode((String) courseRow[24]);
-                dto.setIsEmbedCode(new Boolean(courseRow[25].toString()));
+                dto.setIsEmbedCode(Boolean.valueOf(courseRow[25].toString()));
 
 
                 //get template name
@@ -315,6 +313,15 @@ public class SlideDAOImpl extends GenericDAOImpl<Slide> implements SlideDAO {
                 dto.setVersion(StringUtil.ifNullReturnZero(courseRow[4]));
                 dto.setDuration(Integer.parseInt(StringUtil.ifNullReturnZero(courseRow[11])));
                 dto.setVersionId(Integer.parseInt(StringUtil.ifNullReturnZero(courseRow[7])));
+                String locationPath;
+
+                if (dto.getAssettype().equals("VSC")) {
+                    locationPath = LCMSProperties.getLCMSProperty("lcms.preview.streaming");
+                    dto.setLocation(locationPath + StringUtil.ifNullReturnEmpty(courseRow[14]));
+                } else {
+                    locationPath = LCMSProperties.getLCMSProperty("code.lcms.assets.URL");
+                    dto.setLocation(locationPath + StringUtil.ifNullReturnEmpty(courseRow[13]));
+                }
 
                 if (courseRow[10] != null) {
                     Clob cm = (Clob) courseRow[10];
@@ -431,7 +438,7 @@ public class SlideDAOImpl extends GenericDAOImpl<Slide> implements SlideDAO {
                 dto.setWidth(StringUtil.ifNullReturnEmpty(courseRow[4]));
                 dto.setVersion(StringUtil.ifNullReturnEmpty(courseRow[5]));
                 dto.setAssetversion_id(TypeConvertor.AnyToInteger(courseRow[6]));
-                dto.setDuration(TypeConvertor.AnyToInteger(courseRow[7]));
+                dto.setDuration(Integer.parseInt(StringUtil.ifNullReturnZero(courseRow[7])));
                 if (assettype == 3) {
                     locationPath = LCMSProperties.getLCMSProperty("lcms.preview.streaming");
                     dto.setLocation(locationPath + StringUtil.ifNullReturnEmpty(courseRow[10]));
@@ -446,7 +453,9 @@ public class SlideDAOImpl extends GenericDAOImpl<Slide> implements SlideDAO {
                 slideList.add(dto);
             }
         } catch (Exception ex) {
-            logger.error(ex);
+            logger.error("CourseRows Array detail:");
+            logger.error(courseRows);
+            logger.error("Error:", ex);
         }
         return slideList;
     }
